# agentools

./: .gitignore  .pre-commit-config.yaml  Intro.ipynb  README.ipynb  README.md  environment.yaml  multi_modal.ipynb  openai.ipynb  pyproject.toml  pytest.ini  quickstart.ipynb  tools.ipynb
.github/workflows/: docs.yml
agentools/: __init__.py
agentools/api/: __init__.py  execute.py  mocking.py  model.py  openai.py  utils.py
agentools/assistant/: __init__.py  core.py  message.py  struct.py
agentools/assistants/: __init__.py  chatgpt.py  core.py  event.py  realtime.py  structgpt.py  utils.py
agentools/messages/: __init__.py  content.py  core.py  realtime.py
agentools/retrieval/: __init__.py
agentools/retrieval/db/: __init__.py  collection.py  data.py  embedding.py
agentools/tools/: __init__.py  core.py  decorators.py  types.py  utils.py
agentools/tools/decorators/: fail_with_message.py  function_tool.py  streaming_function_tool.py  utils.py
agentools/utils/: tokens.py  trackers.py
gpt_wrapper/: api.py  assistants.py  messages.py  models.py  storage.py  tools.py  trackers.py  utils.py
tests/: test_content.py  test_messages.py  test_openai.py  test_retrieval.py  test_tools.py
