[tool.poetry]
name = "agentools"
version = "0.4.3"
description = ""
authors = ["Joong-Won Seo <joong.won.seo@gmail.com>"]
readme = "README.md"
packages = [{include = "agentools"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5"
tiktoken = "^0.7.0"
jsonref = "^1.1"
docstring-parser = "^0.15"
json-autocomplete = "^0.2"
openai = "^1.5"
jsonschema = "^4.20"
groq = "^0.5"
qdrant-client = "^1.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
