[tool.poetry]
name = "agentools"
version = "0.6.2"
description = ""
authors = ["Joong-Won Seo <joong.won.seo@gmail.com>"]
readme = "README.md"
packages = [{ include = "agentools" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5"
tiktoken = "^0.7.0"
jsonref = "^1.1"
docstring-parser = "^0.15"
json-autocomplete = "^0.2"
openai = "^1.59.7"
jsonschema = "^4.20"
groq = "^0.5"
qdrant-client = "^1.9"
typing-extensions = "^4.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
