[tool.poetry]
name = "agentools"
version = "0.8.1"
description = ""
authors = ["Joong-Won Seo <joong.won.seo@gmail.com>"]
readme = "README.md"
packages = [{ include = "agentools" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5"
tiktoken = "^0.10.0"
jsonref = "^1.1"
docstring-parser = "^0.15"
json-autocomplete = "^0.2"
openai = { extras = ["realtime"], version = "^1.61.0" }
jsonschema = "^4.20"
qdrant-client = "^1.9"
typing-extensions = "^4.12.2"
litellm = "^1.74.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
